--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Manrope&family=Playpen+Sans&family=Roboto:ital,wght@0,400;0,500;1,500&family=Rubik:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -14,4 +16,9 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+}
+
+.right-section h1 {
+  font-family: bungee Spice;
+  font-size: 50px;
 }
