--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 }
 
 .right-section {
-  border: 1px solid red;
+  border: 1px solid grey;
   width: 100%;
   display: flex;
   flex-direction: column;
