--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,13 @@
   width: 80%;
   margin: 50px auto;
   color: white;
+  max-width: 700px;
 }
 
 .right-section {
   border: 1px solid white;
   background-color: rgba(0,0,0);
+  min-width: 350px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -47,7 +49,7 @@
 .controls-right div{
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 20px;
 }
 
 #play-game {
