--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 }
 
 .right-section {
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: rgba(0,0,0);
   min-width: 350px;
   width: 100%;
